@@ -1,0 +1,3 @@
+MD5 a4c3a1501558d832a62907ae4e08c9d8 IO-Compress-Zlib-2.004.tar.gz 133210
+RMD160 01967eeb986bf18d18974cdbfa1080526e8e8475 IO-Compress-Zlib-2.004.tar.gz 133210
+SHA256 118d06d9c0c528aff68da9f92d64fdb4bdb0f880e37c9887f624a1a1b7c0d82d IO-Compress-Zlib-2.004.tar.gz 133210
